--- a/Resources/views/Order/Admin/new.html.twig
+++ b/Resources/views/Order/Admin/new.html.twig
@@ -11,7 +11,7 @@
 {% block main %}
 <form action="{{ path('ekyna_order_order_admin_new') }}" {{ form_enctype(form) }} method="post" class="form-horizontal form-with-tabs">
     {% include "EkynaOrderBundle:Order/Admin:_form.html.twig" %}
-    {{ ui_form_footer(path('ekyna_order_order_admin_list')) }}
+    {{ ui_form_footer(form) }}
 </form>
 {% endblock %}
 
