--- a/Resources/public/css/order-document.css
+++ b/Resources/public/css/order-document.css
@@ -17,9 +17,39 @@
     width: 100%;
 }
 
-.order-doc-company-address {
-    float: left;
-    text-align: left;
+.order-doc-header table td {
+    width: 32%;
+}
+
+.order-doc-header-logo {
+    width: 36%;
+    max-width: 36%;
+    vertical-align: middle;
+}
+
+.order-doc-header-logo img {
+    height: auto;
+    max-width: 100%;
+}
+
+.order-doc-header-address {
+    padding-left: 30px;
+    vertical-align: top;
+}
+
+.order-doc-header-customer {
+    padding-left: 30px;
+    text-align: right;
+    vertical-align: bottom;
+}
+
+.order-doc-title {
+    border-top: 1px dotted #ddd;
+}
+
+.order-doc-address {
+    width:42%;
+    max-width:42%;
 }
 
 .order-doc-wrap table {
@@ -28,12 +58,12 @@
 }
 
 .order-doc-bloc {
-    margin: 0 0 40px 0;
+    margin-bottom: 40px;
     width: 100%;
 }
 
 .order-doc-bloc:last-child {
-    margin: 0;
+    margin-bottom: 0;
 }
 
 .order-doc-table {
@@ -144,6 +174,9 @@
 }
 
 .order-doc-mentions {
+    font-size: 12px;
+    line-height: 16px;
     margin-top: 60px;
-    text-align: center;
+    padding-top: 12px;
+    border-top: 1px dotted #ddd;
 }
