--- a/Resources/views/Order/Admin/show.html.twig
+++ b/Resources/views/Order/Admin/show.html.twig
@@ -17,11 +17,37 @@
 <div class="show show-with-tabs">
     <ul class="nav nav-tabs">
 	    <li class="active"><a href="#orde-order-general" data-toggle="tab">{{ 'ekyna_core.field.general'|trans }}</a></li>
+	    <li><a href="#orde-order-details" data-toggle="tab">{{ 'ekyna_order.field.details'|trans }}</a></li>
 	</ul>
 	<div class="show-body">
 	    <div class="tab-content">
 		    <div class="tab-pane active" id="orde-order-general">
-		      {{ show_row(order.number, null, 'ekyna_core.field.number') }}
+		        <div class="row">
+                    <div class="col-md-6">{{ show_row(order.number, 'text', 'ekyna_core.field.number', {'label_nb_col': 4}) }}</div>
+                    <div class="col-md-6">{{ show_row(order.createdAt, 'datetime', 'ekyna_core.field.add_date', {'label_nb_col': 4}) }}</div>
+                </div>
+		        <div class="row">
+                    <div class="col-md-6">{{ show_row(order.atiTotal, 'number', 'ekyna_order.field.ati_total', {'label_nb_col': 4, 'append': '€'}) }}</div>
+                    <div class="col-md-6">{{ show_row(order.totalWeight, 'number', 'ekyna_order.field.weight_total', {'label_nb_col': 4, 'append': 'g', 'precision': 0}) }}</div>
+                </div>
+                {{ show_row(order.user, 'entity', 'ekyna_order.field.customer', {'field': 'email', 'route': 'ekyna_user_user_admin_show', 'route_params_map': {'userId': 'id'}}) }}
+		        <div class="row">
+                    <div class="col-md-6">
+                        {% set invoiceAddress = render_address(order.invoiceAddress) %}
+                        {{ show_row(invoiceAddress, 'textarea', 'ekyna_order.field.invoice_address', {'label_nb_col': 4}) }}
+                    </div>
+                    <div class="col-md-6">
+                        {% if order.requiresShipment %}
+                            {% set deliveryAddress = render_address(order.deliveryAddress) %}
+                        {% else %}
+                            {% set deliveryAddress = 'ekyna_order.no_shipment'|trans %}
+                        {% endif %}
+                        {{ show_row(deliveryAddress, 'textarea', 'ekyna_order.field.delivery_address', {'label_nb_col': 4}) }}
+                    </div>
+                </div>
+		    </div>
+		    <div class="tab-pane" id="orde-order-details">
+		        <iframe src="{{ path('ekyna_order_invoice_render', {'orderId': order.id}) }}" style="height:500px;"></iframe>
 		    </div>
 	    </div>
 	</div>
