--- a/Resources/views/Order/Admin/list.html.twig
+++ b/Resources/views/Order/Admin/list.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block actions %}
-{#{ ui_link(path('ekyna_order_order_admin_new'), 'ekyna_order.order.button.new', 'primary', 'sm', 'plus') }#}
+{{ admin_resource_btn('ekyna_order.order', 'new') }}
 {% endblock %}
 
 {% block main %}
