--- a/Resources/views/Order/Admin/new.html.twig
+++ b/Resources/views/Order/Admin/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block actions %}
-{{ ui_link(path('ekyna_order_order_admin_list'), 'ekyna_core.button.back_to_list', 'default', 'sm', 'list') }}
+{{ admin_resource_btn('ekyna_order.order', 'list') }}
 {% endblock %}
 
 {% block main %}
