--- a/Resources/views/Form/form_div_layout.html.twig
+++ b/Resources/views/Form/form_div_layout.html.twig
@@ -2,6 +2,7 @@
 
 {% block ekyna_order_order_item_widget %}
 {% spaceless %}
+    {{ form_errors(form) }}
     <div class="row">
         <div class="col-md-8">
             {{ form_row(form.designation) }} {# , {'label_col': 6, 'widget_col': 6} #}
@@ -20,7 +21,7 @@
             <button class="btn btn-default btn-sm" data-role="move-down" type="button"><span class="glyphicon glyphicon-chevron-down"></span></button>
             {{ form_row(form.position) }}
         </div>
-        {{ form_rest(form) }}
     </div>
+    {{ form_rest(form) }}
 {% endspaceless %}
 {% endblock ekyna_order_order_item_widget %}
