--- a/Resources/views/Order/invoice.html.twig
+++ b/Resources/views/Order/invoice.html.twig
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block stylesheets -%}
 	{% stylesheets output='css/order-document.css' filter='cssrewrite, ?yui_css' debug=false
-	    'bundles/ekynaorder/css/order-document.css'
+	    '@EkynaOrderBundle/Resources/asset/css/order-document.css'
 	%}
-	<link href="{{ asset_url }}" rel="stylesheet" type="text/css" />
+	<link href="{{ app.request.schemeAndHttpHost ~ asset_url }}" rel="stylesheet" type="text/css" />
 	{%- endstylesheets %}
     {% endblock %}
 </head>
@@ -21,7 +21,7 @@
     <tr>
         <td class="order-doc-header-logo">
             <a href="{{ path('home') }}">
-                <img alt="{{ get_setting('general.site_name') }}" src="{{ asset(order_document_logo) }}" />
+                <img alt="{{ get_setting('general.site_name') }}" src="{{ app.request.schemeAndHttpHost ~ asset(order_document_logo) }}" />
             </a>
         </td>
         <td class="order-doc-header-address">
