Settings, user account config

--- a/Resources/views/Settings/show.html.twig
+++ b/Resources/views/Settings/show.html.twig
@@ -1,1 +1,1 @@
-{{ show_row(settings.order.document_footer, 'textarea', 'ekyna_order.field.document_footer') }}
+{{ show_row(settings.order.document_footer, 'textarea', 'ekyna_order.field.document_footer', {'label_nb_col': 3}) }}
