--- a/Resources/views/Admin/Order/edit.html.twig
+++ b/Resources/views/Admin/Order/edit.html.twig
@@ -1,20 +1,12 @@
-{% extends "EkynaAdminBundle:Entity:sided.html.twig" %}
+{% extends "EkynaAdminBundle:Entity/Default:edit.html.twig" %}
 
 {% block title %}
 <h1>{{ 'ekyna_order.order.header.edit'|trans({'%number%': order.number})|raw }}</h1>
 {% endblock %}
 
-{% block actions %}
-{{ admin_resource_btn(order, 'list') }}
-{{ admin_resource_btn(order, 'new') }}
-{% endblock %}
-
 {% block main %}
 {% form_theme form "EkynaOrderBundle:Form:form_div_layout.html.twig" %}
-<form action="{{ path('ekyna_order_order_admin_edit', {'orderId': order.id}) }}" {{ form_enctype(form) }} method="post" class="form-horizontal form-with-tabs">
-    {% include "EkynaOrderBundle:Admin/Order:_form.html.twig" %}
-    {{ ui_form_footer(form) }}
-</form>
+{{ parent() }}
 {% endblock %}
 
 {% block javascripts -%}
