--- a/Resources/views/Document/invoice.html.twig
+++ b/Resources/views/Document/invoice.html.twig
@@ -16,6 +16,8 @@
 <body>
 <div class="order-doc-wrap">
 
+{# TODO translations #}
+
 {# --- HEADER --- #}
 {% block header %}
 <table class="order-doc-bloc order-doc-header">
