--- a/Resources/views/Admin/Settings/show.html.twig
+++ b/Resources/views/Admin/Settings/show.html.twig
@@ -1,1 +1,1 @@
-{{ show_row(settings.order.document_footer|raw, 'textarea', 'ekyna_order.order.field.document_footer', {'label_nb_col': 3}) }}
+{{ show_row(settings.order.document_footer, 'textarea', 'ekyna_order.order.field.document_footer', {'label_nb_col': 3, 'html': true}) }}
