--- a/Resources/views/Admin/Order/_form.html.twig
+++ b/Resources/views/Admin/Order/_form.html.twig
@@ -25,7 +25,7 @@
 
 
             <div class="form-group">
-                {#<label class="control-label col-md-2 required">Addresse de facturation</label>#}
+                {#<label class="control-label col-md-2 required">Adresse de facturation</label>#}
                 {{ form_label(form.deliveryAddress) }}
                 <div class="col-md-10">
                     {{ form_row(form.sameAddress) }}
