--- a/Resources/views/Admin/Order/show.html.twig
+++ b/Resources/views/Admin/Order/show.html.twig
@@ -49,7 +49,7 @@
                             {{ show_row(order.totalWeight, 'number', 'ekyna_order.order.field.weight_total', {'label_nb_col': 4, 'append': 'g', 'precision': 0}) }}
                         </div>
                         <div class="col-md-6">
-                            {{ show_row(render_shipment_state(order.shipmentState), 'text', 'ekyna_order.order.field.shipment_state', {'label_nb_col': 4}) }}
+                            {{ show_row(order.shipmentState|shipment_state_badge, 'text', 'ekyna_order.order.field.shipment_state', {'label_nb_col': 4}) }}
                         </div>
                     </div>
                     {% endif %}
