--- a/Resources/views/Admin/Order/show.html.twig
+++ b/Resources/views/Admin/Order/show.html.twig
@@ -127,7 +127,7 @@
                             {% for payment in order.payments %}
                             <tr data-id="1">
                                 <td>{{ payment.method }}</td>
-                                <td>{{ payment.amount|localizedcurrency(payment.currency) }}</td>
+                                <td>{{ payment.getAmount()|localizedcurrency(payment.currency) }}</td>
                                 <td>{{ payment.currency }}</td>
                                 <td>{{ payment.notes }}</td>
                                 <td>{{ payment|payment_state_badge }}</td>
