--- a/Resources/views/Admin/Order/show.html.twig
+++ b/Resources/views/Admin/Order/show.html.twig
@@ -104,6 +104,42 @@
                         </div>
                     </div>
 
+                    {% if not order.isEmpty() %}
+                    <h4 class="sub-header">
+                        {{ 'ekyna_order.order.field.details'|trans }}
+                    </h4>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                            <tr>
+                                <th>{{ 'ekyna_core.field.designation'|trans }}</th>
+                                <th>{{ 'ekyna_core.field.reference'|trans }}</th>
+                                <th>{{ 'ekyna_order.item.field.net_unit_price'|trans }}</th>
+                                <th>{{ 'ekyna_core.field.quantity'|trans }}</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for item in order.items %}
+                                <tr>
+                                    <td>
+                                        {{ item.designation|nl2br|raw }}
+                                    </td>
+                                    <td>
+                                        {{ item.reference }}
+                                    </td>
+                                    <td class="order-doc-number">
+                                        {{ item.price|localizedcurrency(order.currency) }}
+                                    </td>
+                                    <td class="order-doc-number">
+                                        {{ item.quantity }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    {% endif %}
+
                     <h4 class="sub-header">
                         <a href="{{ path('ekyna_order_order_admin_payment_new', {'orderId': order.id}) }}" class="btn btn-success btn-xs pull-right">
                             {{ 'ekyna_order.payment.button.new'|trans }}
